--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,8 @@
 <div class="card-columns">
+     <app-chart></app-chart>
+     <app-groups></app-groups>
     <app-chat></app-chat>
-<!--    <div class="card">
-        <div class="card-block">
-            <app-favorit-devices></app-favorit-devices>
-        </div>
-    </div>-->
-<!--    <div class="card">
-        <div class="card-block">
-            <app-active-devices></app-active-devices>
-        </div>
-    </div>-->
-    <app-groups></app-groups>
+    <app-variables></app-variables>
     <app-countdowns></app-countdowns>
     <app-timers></app-timers> 
 </div>
