--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,3 @@
-body{
-	font-family: sans-serif!important;
-	font-weight: 350!important;
-	overflow-y: scroll !important;
-}
 .favorittile{
 	/* box-sizing: content-box; */
 	overflow-y: auto;
@@ -23,8 +18,19 @@ body{
 	margin-left:20%;
 }
 .content{
-	padding: 0px 1.25rem;
-    margin-top: 82px;
+    position: absolute;
+    padding: 1.25rem;
+    /* margin-top: 59px; */
+    overflow: auto;
+    /* height: 100%; */
+    top: 59px;
+    right: 0;
+    bottom: 0px;
+    left: 0;
+    overflow-y: scroll;
+}
+.content router-outlet{
+    position: relative;
 }
 .bg{
 	background-image: url('../assets/img/purty_wood.jpg');
@@ -35,6 +41,9 @@ body{
 	top: 0;
 	left: 0;
 	z-index: -1;
+}
+.nav-link-active{
+    background-color: #EFEFFF;
 }
 .loaderBg{
 	z-index:1100;
