--- a/src/app/device/shutter.html
+++ b/src/app/device/shutter.html
@@ -1,9 +1,9 @@
 <div class="test d-flex justify-content-end">
 	<div class="mr-auto devicename">{{device.name}}</div>
-	<div style="display: flex; height: 40px;">
-		<div class="mr-auto devicename">{{device.status == 1 ? 'geschlossen' : 'geöffnet'}}</div>
+    <div class="mr-1 devicename">{{device.status == 0 ? 'geschlossen' : 'geöffnet'}}</div>
+	<div class="d-flex" style="max-width:100%;">
 		<button
-			class="btnGrey unselectable"
+            class="btnGrey unselectable"
             (click)="switchDevice({id: device.deviceid, status: 1})"
 			>
 				<!-- style="fill:#389B20" -->
