--- a/src/app/devices/devices.component.css
+++ b/src/app/devices/devices.component.css
@@ -1,8 +1,20 @@
+ul, ol{
+	list-style-type: none;
+	padding: 0px;
+	margin:0px;
+	list-style-type: none;
+}
 .devicename{
 	white-space: nowrap; 
 	text-align: inherit;
-	margin: auto 0;
-	color: #292b2c;
+    color: #292b2c;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    cursor:pointer;
+    margin:auto auto auto 0 !important;
+}
+.btnRight{
+    display: flex;
 }
 .btnOn{
 	background-color:#c0ffc0;
@@ -13,12 +25,12 @@
 	/*width: 25%;*/
 }
 button{
+	height: 45px;
 	cursor:pointer;
-	margin:2px 1px 2px 0px;
-	width: 85px;
-	min-width:60px;
-	
+    margin: 2px 5px 2px 0px;
+	width:80px;
+	box-sizing: initial;
 	border:0px;
 	border-radius:0px;
-	/*margin:1px 0px;*/
+	padding:0;
 }
