--- a/src/app/timer/timer.component.css
+++ b/src/app/timer/timer.component.css
@@ -8,7 +8,7 @@
     -moz-appearance: none;
     appearance: none;
     font-size:1rem;
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    /* font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; */
 }
 .form-control:disabled {
     border: none!important;
