--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,19 @@
 i{
     cursor:pointer;
 }
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+.material-icons.md-62 { font-size: 62px; }
+
+body{
+	font-family: sans-serif!important;
+    font-weight: 400!important;
+    overflow:hidden;
+}
+
+p, ul, ol, li, span, h1, h2, h3, h4,h5, h6, small, select{
+	font-family: sans-serif!important;
+	font-weight: 400!important;
+}
